...

        <TextView
            android:id="@+id/configuration_details_move_1"
            style="@style/secondary_text_with_background_style"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            tools:text="Thunderbolt"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

...
            app:layout_constraintTop_toBottomOf="@+id/configuration_details_move_3"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/configuration_details_move_3"
            style="@style/secondary_text_with_background_style"
            tools:text="Grass knot"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/details_choose_configuration_action_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_light"
            android:text="@string/details_action_button_choose_configuration" />

        <Button
            android:id="@+id/details_damage_calculator_action_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:text="@string/speed_calculator_title"
            android:backgroundTint="@color/primary_light"
            />

        <Button
            android:id="@+id/details_edit_configuration_action_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_light"
            android:text="@string/edit_configuration_activity_title" />

...
