...
        android:id="@+id/move_damage_view_left_right"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/move_damage_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_add_circle_black_24dp"
            android:padding="16dp"
            android:tint="@color/text_primary"
            android:background="@color/primary"
...
                tools:text="Flamethrower"
                android:textColor="@color/text_primary"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <es.developer.achambi.pkmng.modules.ui.screen.TypeView
                android:id="@+id/move_damage_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_primary"
                app:layout_constraintLeft_toLeftOf="parent"
...
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_primary"
                app:layout_constraintLeft_toRightOf="@+id/move_damage_type_text"
                app:layout_constraintTop_toBottomOf="@+id/move_damage_name_text"
                tools:text="Special" />

            <TextView
                android:id="@+id/move_damage_power_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
...
